hphp/test/slow/late-init/redeclare1.php.expectf
Fatal error: Property B::$x must be <<__LateInit>> (as in class A) in %s/redeclare1.php on line 8
